--- a/templates/reloj.html
+++ b/templates/reloj.html
@@ -7,7 +7,7 @@
   var ss;
   var date_string;
   function startTime() {
-    fetch("/testa")
+    fetch("/ahora")
       .then(res => res.json())
       .then(out => {
         console.log(out.result[1]);
