--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,143 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://bootswatch.com/4/lumen/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="{{url_for('static', filename='css/login.css')}}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{url_for('static', filename='css/main.css')}}"
-    />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-    />
-    <!-- Bootstrap core CSS -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <!-- Material Design Bootstrap -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/css/mdb.min.css"
-      rel="stylesheet"
-    />
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://bootswatch.com/4/lumen/bootstrap.min.css" />
+  <link rel="stylesheet" href="{{url_for('static', filename='css/login.css')}}" />
+  <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}" />
 
-    {% block head %} {% endblock %}
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" />
+  <!-- Bootstrap core CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- Material Design Bootstrap -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/css/mdb.min.css" rel="stylesheet" />
 
-    <title>Página Principal</title>
-  </head>
+  {% block head %} {% endblock %}
 
-  <header>
-    <nav
-      class="navbar navbar-expand-md navbar-dark bg-primary {% if primer %} fadeInDown {% endif %}"
-    >
-      <div
-        class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2"
-      >
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="main">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="calendar">Calendario</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="evento">Añadir evento</a>
-          </li>
-        </ul>
-      </div>
-      <div class="mx-auto order-0">
-        <a class="navbar-brand mx-auto" href="main"
-          >Sistema de gestión de control de aguas</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target=".dual-collapse2"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
-      <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Ajustes de cuenta</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="logout">Cerrar Sesión</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+  <title>Página Principal</title>
+</head>
 
-  <body onload="startTime()">
-    <h3 class="d-flex justify-content-end">
-      Hora actual del sistema<span class="badge badge-dark" id="reloj"></span>
-    </h3>
-    <span class="badge badge-dark"></span>
-
-    <div class="mt-4 ml-4 mr-4">
-      {% block body %} {% endblock %}
+<header>
+  <nav class="navbar navbar-expand-md navbar-dark bg-primary {% if primer %} fadeInDown {% endif %}">
+    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="main">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="calendar">Calendario</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="evento">Añadir evento</a>
+        </li>
+      </ul>
     </div>
-  </body>
-  {% include "reloj.html" %}
-  <!-- Optional JavaScript -->
-  {% block script %} {% endblock %}
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <div class="mx-auto order-0">
+      <a class="navbar-brand mx-auto" href="main">Sistema de gestión de control de aguas</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Ajustes de cuenta</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="logout">Cerrar Sesión</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"
-  ></script>
+<body onload="startTime()">
+  <h4 class="d-flex justify-content-end badge-dark">
+    Hora actual del sistema <span class="badge badge-danger ml-3" id="reloj"></span>
+  </h4>
+  <span class="badge badge-dark"></span>
 
-  <!-- JQuery -->
-  <script
-    type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
-  ></script>
-  <!-- Bootstrap tooltips -->
+  <div class="mt-4 ml-4 mr-4">
+    {% block body %} {% endblock %}
+  </div>
+</body>
+{% include "reloj.html" %}
 
-  <!-- Bootstrap core JavaScript -->
-  <script
-    type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"
-  ></script>
-  <!-- MDB core JavaScript -->
-  <script
-    type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/js/mdb.min.js"
-  ></script>
 
-  {% include "footer.html" %}
+{% include "footer.html" %}
+
+<!-- Optional JavaScript -->
+{% block script %} {% endblock %}
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+<!-- JQuery -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<!-- Bootstrap tooltips -->
+
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<!-- MDB core JavaScript -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/js/mdb.min.js"></script>
+
+
+
 </html>
