--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,19 +1,66 @@
+<!-- Footer -->
+<footer class="page-footer font-small grey darken-3 mt-5">
+
+  <!-- Footer Elements -->
+  <div class="container">
+
+    <!-- Grid row-->
+    <div class="row">
+
+      <!-- Grid column -->
+      <div class="col-md-12 py-1">
+        <div class="mb-5 flex-center">
+
+          <!-- Facebook -->
+          <a class="fb-ic" href="https://www.facebook.com/EII.ULPGC/" target="_blank">
+            <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+          <!-- Twitter -->
+          <a class="tw-ic" href="https://twitter.com/eii_ulpgc" target="_blank">
+            <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+
+          <!--Linkedin -->
+          <a class="li-ic" href="https://www.linkedin.com/in/renato-sosa-garc%C3%ADa-6495a8190/" target="_blank">
+            <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+          <!--Instagram-->
+          <a class="ins-ic" href="https://www.instagram.com/ulpgc_para_ti/" target="_blank">
+            <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+
+        </div>
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row-->
+
+  </div>
+  <!-- Footer Elements -->
+
+
+
+</footer>
+
+
+
+
 
 <!-- Footer -->
-<footer class="page-footer font-small mdb-color lighten-3 pt-4">
+<footer class="page-footer font-small mdb-color lighten-1 pt-1">
 
   <!-- Footer Links -->
   <div class="container text-center text-md-left">
 
     <!-- Grid row -->
     <div class="row">
-
       <!-- Grid column -->
-      <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
+      <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-1 mb-1">
 
         <!-- Content -->
-        <h5 class="font-weight-bold text-uppercase mb-4">Footer Content</h5>
-        <p>Here you can use rows and columns to organize your footer content.</p>
+        <h5 class="font-weight-bold text-uppercase mb-4">Sistema de Gestión de control de aguas</h5>
+        <p>Aplicación web diseñada para controlar y monitorizar el sistema de distribución de aguas</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit amet numquam iure provident voluptate
           esse
           quasi, veritatis totam voluptas nostrum.</p>
@@ -27,29 +74,31 @@
       <div class="col-md-2 col-lg-2 mx-auto my-md-4 my-0 mt-4 mb-1">
 
         <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mb-4">About</h5>
+        <h5 class="font-weight-bold text-uppercase mb-4">Sobre nosotros</h5>
 
         <ul class="list-unstyled">
           <li>
             <p>
-              <a href="#!">PROJECTS</a>
+              <a href="https://www.ulpgc.es/">ULPGC</a>
+            </p>
+          </li>
+          <li>
+          <li>
+            <p>
+              <a href="https://www.ulpgcparati.es/">ULPGC PARA TI</a>
             </p>
           </li>
           <li>
             <p>
-              <a href="#!">ABOUT US</a>
+              <a href="https://www.eii.ulpgc.es/tb_university_ex/">ESCUELA</a>
             </p>
           </li>
           <li>
             <p>
-              <a href="#!">BLOG</a>
+              <a href="https://www.eii.ulpgc.es/tb_university_ex/?q=eventos-realizados-en-la-eii">EVENTOS</a>
             </p>
           </li>
-          <li>
-            <p>
-              <a href="#!">AWARDS</a>
-            </p>
-          </li>
+
         </ul>
 
       </div>
@@ -61,24 +110,28 @@
       <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">
 
         <!-- Contact details -->
-        <h5 class="font-weight-bold text-uppercase mb-4">Address</h5>
+        <h5 class="font-weight-bold text-uppercase mb-4">Dirección y Contacto</h5>
 
         <ul class="list-unstyled">
           <li>
             <p>
-              <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+              <i class="fas fa-home mr-3"></i> Escuela de Ingeniería Informática.
+              Edificio Departamental de Informática y Matemáticas.
+              Campus Universitario de Tafira.
+              35017 Las Palmas de Gran Canaria
+            </p>
           </li>
           <li>
             <p>
-              <i class="fas fa-envelope mr-3"></i> info@example.com</p>
+              <i class="fas fa-envelope mr-3"></i> direccion.eii@ulpgc.es</p>
           </li>
           <li>
             <p>
-              <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+              <i class="fas fa-phone mr-3"></i> + 34 928 45 10 00</p>
           </li>
           <li>
             <p>
-              <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+              <i class="fas fa-print mr-3"></i> + 34 928 45 10 00</p>
           </li>
         </ul>
 
@@ -87,30 +140,7 @@
 
       <hr class="clearfix w-100 d-md-none">
 
-      <!-- Grid column -->
-      <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
 
-        <!-- Social buttons -->
-        <h5 class="font-weight-bold text-uppercase mb-4">Follow Us</h5>
-
-        <!-- Facebook -->
-        <a type="button" class="btn-floating btn-fb">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <!-- Twitter -->
-        <a type="button" class="btn-floating btn-tw">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <!-- Google +-->
-        <a type="button" class="btn-floating btn-gplus">
-          <i class="fab fa-google-plus-g"></i>
-        </a>
-        <!-- Dribbble -->
-        <a type="button" class="btn-floating btn-dribbble">
-          <i class="fab fa-dribbble"></i>
-        </a>
-
-      </div>
       <!-- Grid column -->
 
     </div>
@@ -120,8 +150,8 @@
   <!-- Footer Links -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2018 Copyright:
-    <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+  <div class="footer-copyright text-center py-3">© 2019 Copyright:
+    <a href="https://www.eii.ulpgc.es/"> Escuela de Ingeniería Informática de la ULPGC.</a>
   </div>
   <!-- Copyright -->
 
