--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,13 +12,14 @@
   <link rel="stylesheet" href="https://bootswatch.com/4/lumen/bootstrap.min.css" />
   <link rel="stylesheet" href="{{url_for('static', filename='css/login.css')}}" />
   <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}" />
+  <link rel="stylesheet" href="{{url_for('static', filename='css/footer.css')}}" />
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" />
   <!-- Bootstrap core CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Material Design Bootstrap -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/css/mdb.min.css" rel="stylesheet" />
+
 
   {% block head %} {% endblock %}
 
@@ -26,7 +27,7 @@
 </head>
 
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-primary {% if primer %} fadeInDown {% endif %}">
+  <nav class="navbar navbar-expand-md navbar-dark  {% if primer %} fadeInDown {% endif %}" id="f3">
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -36,7 +37,7 @@
           <a class="nav-link" href="calendar">Calendario</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="evento">Añadir evento</a>
+          <a class="nav-link" href="estadisticas">Estadísticas</a>
         </li>
       </ul>
     </div>
@@ -60,19 +61,25 @@
 </header>
 
 <body onload="startTime()">
-  <h4 class="d-flex justify-content-end badge-dark">
-    Hora actual del sistema <span class="badge badge-danger ml-3" id="reloj"></span>
-  </h4>
-  <span class="badge badge-dark"></span>
+  <div id="wrap">
+    <div id="main" class=" clear-top">
+      <h4 class="d-flex justify-content-end badge-dark">
+        Hora actual del sistema <span class="badge badge-danger ml-3" id="reloj"></span>
+      </h4>
+      <span class="badge badge-dark"></span>
 
-  <div class="mt-4 ml-4 mr-4">
-    {% block body %} {% endblock %}
+      <div class="mt-4 ml-4 mr-4">
+        {% block body %} {% endblock %}
+      </div>
+    </div>
   </div>
+  {% include "footer.html" %}
 </body>
 {% include "reloj.html" %}
 
 
-{% include "footer.html" %}
+
+
 
 <!-- Optional JavaScript -->
 {% block script %} {% endblock %}
